group 'com.mobile'
version '1.0-SNAPSHOT'

apply plugin: 'java'

sourceCompatibility = 1.8
targetCompatibility = 1.8

task gradle_start {
    println '\n\n  _-_-_-_-_-_	STARTING GRADLE EXECUTION   _-_-_-_-_-_	\n\n'
}

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'org.testng', name: 'testng', version: '6.9.10'
    testCompile 'io.appium:java-client:4.1.2'
}

println '//\n------------------------Testing Started---------------------------------'
test {
    // enable TestNG support (default is JUnit)
    useTestNG() {
    }

    // explicitly include or exclude tests
    include '**/*Test*.*'

    // show standard out and standard error of the test JVM(s) on the console
    testLogging.showStandardStreams = false

    // set heap size for the test JVM(s)
    minHeapSize = "128m"
    maxHeapSize = "512m"

    // set JVM arguments for the test JVM(s)
    jvmArgs '-XX:MaxPermSize=256m'

    // listen to events in the test execution lifecycle
    beforeTest { descriptor ->
        logger.lifecycle("Running test: " + descriptor)
    }

    // listen to standard out and standard error of the test JVM(s)
    onOutput { descriptor, event ->
        logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message)
    }
}